[package]
name = "Arin-Proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3"
actix-rt = "2.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
lazy_static = "1.4"
blake3 = "1.3"
sha2 = "0.10"
rand = "0.8"
dashmap = "5.4"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]